Added two lessons for the first nocturn for Matins.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -148,7 +148,7 @@
 	
 	5. Quóniam non est in morte qui memor sit \textbf{tu}i:~* in inférno autem quis confité\textit{bi}\textit{tur} \textbf{ti}bi?
 	
-	6. Laborávi in gémitu meo,~† lavábo per síngulas noctes lectum \textbf{me}um:~* lácrimis meis stratum me\textit{um} \textit{ri}\textbf{gá}bo.
+	6. Laborávi in gémitu meo,~{\color{red}\GreDagger} lavábo per síngulas noctes lectum \textbf{me}um:~* lácrimis meis stratum me\textit{um} \textit{ri}\textbf{gá}bo.
 	
 	7. Turbátus est a furóre óculus \textbf{me}us:~* inveterávi inter omnes ini\textit{mí}\textit{cos} \textbf{me}os.
 	
@@ -209,7 +209,7 @@
 	
 	4. Si réddidi retribuéntibus mihi \textbf{ma}la,~* décidam mérito ab inimícis me\textit{is} \textit{in}\textbf{á}nis.
 	
-	5. Persequátur inimícus ánimam meam,~† et comprehéndat, et concúlcet in terra vitam \textbf{me}am,~* et glóriam meam in púlve\textit{rem} \textit{de}\textbf{dú}cat.
+	5. Persequátur inimícus ánimam meam,~{\color{red}\GreDagger} et\\ comprehéndat, et concúlcet in terra vitam \textbf{me}am,~* et glóriam meam in púlve\textit{rem} \textit{de}\textbf{dú}cat.
 	
 	6. Exsúrge, Dómine, in ira \textbf{tu}a:~* et exaltáre in fínibus inimicó\textit{rum} \textit{me}\textbf{ó}rum.
 	
@@ -282,6 +282,42 @@
 \gresetinitiallines{1}
 \gregorioscore{antiphon_nequando_rapiat}
 \textit{Lest at any time, like a lion, he seize upon my soul, while there is no one to rescue me, nor to save.}
+
+\subsection*{First Lesson - Job 7:16-21}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Parce mihi, Dómine, nihil enim sunt dies mei. Quid est homo, quia magníficas eum? aut quid appónis erga eum cor tuum? Vísitas eum dilúculo, et súbito probas illum. Usquequo non parcis mihi, nec dimíttis me ut glútiam salívam meam? Peccávi; quid fáciam tibi, O custos hóminum? quare posuísti me contrárium tibi, et factus sum mihimetípsi gravis? Cur non tollis peccátum meum, et quare non aufters iniquitátem meam? Ecce nunc in púlvere dórmiam: et, si mane me qu\ae síeris, non subsístam.
+	
+	{\color{red}\Rbar.} Credo quod Redémptor meus vivit, et in novíssimo die de terra surrectúrus sum. * Et in carne mea vidébo Deum Salvatórem meum.
+	
+	{\color{red}\Vbar.} Quem visúrus sum ego ipse et non álius, et óculi mei conspectúri sunt. * Et in carne mea vidébo Deum Salvatórem meum.
+}{
+	Spare me, for my days are nothing. What is man that Thou shouldst magnify him? or why dost Thou set Thy heart upon him? Thou visitest him early in the morning, and Thou provest him suddenly. How long wilt Thou not spare me, nor suffer me to swallow down my spittle? I have sinned, what shall I do to Thee, O keeper of men? why hast Thou set me opposite to Thee, and I am become burdensome to myself? Why dost Thou not remove my sin, and why dost Thou not take away mine iniquity? Behold now, I shall sleep in the dust: and if Thou seek me in the morning, I shall not be.
+	
+	{\color{red}\Rbar.} I believe my Redeemer liveth, and that in the last day I shall rise from the earth. * And in my flesh I shall see God my Saviour.
+	
+	{\color{red}\Vbar.} Whom I myself shall see, and not another, and my eyes shall behold. * And in my flesh I shall see God my Savior.
+}
+\end{latinenglishsection}
+
+\subsection*{Second Lesson - Job 10:1-7}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Taedet ánimam meam vit\ae me\ae, dimíttam advérsum me elóquium meum, loquar in amaritúdine ánim\ae me\ae. Dicam Deo: Noli me condemnár; indica mihi, cur me ita júdices. Numquid bonum tibi vidétur, si calumniéris me, et ópprimas me opus mánuum tuárum, et consílium impiórum ádjuves? Numquid óculi cárnei tibi sunt; aut sicut videt homo, et tu vidébis? Numquid sicut dies hóminis dies tui, et anni tui sicut humána sunt témpora, ut qu\ae ras iniquitátem meam, et peccátum meum scrutéris? Et scias quia nihil ímpium fécerim, cum sit nemo qui de manu tua possit erúere.
+	
+	{\color{red}\Rbar.} Qui Lázarum resuscitásti a monuménto f\oe tidum: * Tu eis, Dómine, dona réquiem, et locum indulgénti\ae.
+	
+	{\color{red}\Vbar.} Qui ventúrus es judicáre vivos et mórtuos, et s\'{\ae}culum per ignem: * Tu eis, Dómine, dona réquiem, et locum indulgénti\ae.
+}{
+	My soul is weary of life, I will let go my speech against myself, I will speak in the bitterness of my soul, I will say to God: Do not condemn me; tell me why Thou judgest me so. Doth it seem good to Thee that Thou shouldst crush me and oppress me, the work of Thy own hands, and help the counsel of the wicked? Hast Thou eyes of flesh, or seest Thou as man seeth? Are Thy days as the days of man, and are Thy years as the times of men, Thou shouldst inquire after my iniquity, and search after my sin? And Thou knowest that I have done no wickerd thing, whereas there is no man that can deliver out of Thy hand.
+	
+	{\color{red}\Rbar.} Thou who didst raise Lazarus from the grave: * Thou, O Lord, give them rest, and a place of pardon.
+	
+	{\color{red}\Vbar.} Thou who art to come to judge the living and the dead, and the world by fire: * Thou, O Lord, give them rest, and a place of pardon.
+}
+\end{latinenglishsection}
  
 \vfill\pagebreak
 
