Added the 3rd lesson for Matins.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -318,11 +318,34 @@
 	{\color{red}\Vbar.} Thou who art to come to judge the living and the dead, and the world by fire: * Thou, O Lord, give them rest, and a place of pardon.
 }
 \end{latinenglishsection}
+
+\subsection*{Third Lesson - Job 10:8-12}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Manus tu\ae fec\'{e}runt me, et plasmav\'{e}runt me totum in circ\'{u}itu: et sic rep\'{e}nte pr\ae c\'{i}pitas me? Mem\'{e}nto qu\ae so quod sicut lutum f\'{e}ceris me, et in p\'{u}lverem red\'{u}ces me. Nonne sicut lac muls\'{i}sti me, et sicut c\'{a}seum me coagul\'{a}sto? Pelle et c\'{a}rnibus vest\'{i}sti me; \'{o}ssibus et nervis compeg\'{i}sti me. Vitam et miseric\'{o}rdiam tribu\'{i}sti mihi, et visit\'{a}tio tua custod\'{i}vit sp\'{i}ritum meum.
+	
+	{\color{red}\Rbar.} D\'{o}mine, quando v\'{e}neris judic\'{a}re terram, ubi me absc\'{o}ndam a vultu ir\ae tu\ae? * Quia pecc\'{a}vi nimis in vita mea.
+	
+	{\color{red}\Vbar.} Comm\'{i}ssa mea pav\'{e}sco, et ante te erub\'{e}sco: dum v\'{e}neris judic\'{a}re, noli me condemn\'{a}re. * Quia pecc\'{a}vi nimis in vita mea.
+	
+	{\color{red}\Rbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine: et lux perp\'{e}tua l\'{u}ceat eis. * Quia pecc\'{a}vi nimis in vita mea.
+}{
+	Thy hands have made me, and fashioned me wholly round about: and dost Thou thus cast me down headlong on a sudden? Remember, I beseech Thee, that Thou hast made me as the clay, and Thou wilt bring me into dust again. Hast Thou not pressed me out as milk, and curdled me like cheese? Thou hast clothed me with skin and flesh; Thou hast put me together with bones and sinews. Thou hast granted me life and mercy, and Thy visitation hath preserved my spirit.	
+	
+	{\color{red}\Rbar.} O Lord, when Thou wilt come to judge the earth, where shall I hide myself from the face of Thy wrath? * For I have sinned exceedingly in my life.
+	
+	{\color{red}\Vbar.} I dread my misdeeds, and blush before Thee; do not condemn me when Thou comest me when Thou comest to judge. * For I have sinned exceedingly in my life.
+	
+	{\color{red}\Rbar.} Eternal rest grant unto them, O Lord, and let perpetual light shine upon them. * For I have sinned exceedingly in my life.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{If the First Nocturn only is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
  
 \vfill\pagebreak
 
 \begin{latinenglishsection}
-
 \latinenglish{
 	{\color{red}\Rbar.} Líbera me, Dómine, de morte ætérna in die illa treménda, {\color{red}*} Quando cæli movéndi sunt et terra: {\color{red}*} Dum véneris judicáre s\'{\ae}culum per ignem.\\
 	{\color{red}\Vbar.} Tremens factus sum ego et tímeo, dum discússio vénerit atque ventúra ira. {\color{red}*} Quando cæli movéndi sunt et terra.\\
