Completed Psalms for the Second Nocturn of Matins for the Dead.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -42,6 +42,8 @@
 
 \textit{Psalm 94: (1) Come, let us praise the Lord with joy; let us joyfully sing to God our Savior. Let us come before His presence with thanksgiving, and make a joyful noise to Him with psalms. (a) Come, let us adore the King, to whom all things live. (2) For the Lord is a great God, and a great king above all gods. For the Lord will not reject His people. For in His hands are all the ends of the earth, and the heights of the montains are His. (a) Come, let us adore. (3) For the sea is His, and He made it, and His hands formed the dry land. Come, let us adore and fall down, and weep before the Lord that made us. For He is the Lord oour God: and we are His people, and the sheep of His pasture. (a) Come, let us adore the King, to whom all things live. (4) Today, if you shall hear His voice, harden not your hearts. As in the provocation, according to the day of temptation in the wilderness: where your fathers tempted Me, they proved Me, and saw My works. (a) Come, let us adore. (5) Forty years long I was offended with that generation, and I said: These always err in heart. And these men have not known My ways: so I swore in My wrath, that they shall not enter into My rest. (a) Come, let us adore the King, to whom all things live. (6) Eternal rest grant unto them, O Lord, * and let perpetual line shine upon them. (a) Come, let us adore. (a) Come, let us adore the King, to whom all things live.}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
  \section*{First Nocturn}
  \begin{center}
  \textit{To be said on Sundays, Mondays, and Thursdays.}
@@ -127,6 +129,7 @@
 \textit{Direct, O Lord, my God, my steps in Thy sight.}
  
 %%
+
 \hspace{2cm}
  
 \textit{Turn, O Lord, and deliver my soul, for there is none in death who will be mindful of Thee.}
@@ -283,6 +286,8 @@
 \gregorioscore{antiphon_nequando_rapiat}
 \textit{Lest at any time, like a lion, he seize upon my soul, while there is no one to rescue me, nor to save.}
 
+%%
+
 \subsection*{First Lesson - Job 7:16-21}
 
 \begin{latinenglishsection}
@@ -345,6 +350,310 @@
  
 \vfill\pagebreak
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+ \section*{Second Nocturn}
+ \begin{center}
+ \textit{To be said on Tuesdays and Fridays}
+ \end{center}
+ 
+  \textit{He hath set me in a place of pasture.}
+ \gresetinitiallines{1}
+ \gregorioscore{antiphon_in_loco_pascuae}
+ 
+ \subsection*{Psalm 22}
+ 
+ \gresetinitiallines{1}
+ \gregorioscore{intonation_psalm_22}
+ 
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Super aquam refectiónis edu\textbf{cá}vit me:~* ánimam me\textit{am} \textit{con}\textbf{vér}tit.
+
+	3. Dedúxit me super sémitas jus\textbf{tí}tiæ:~* propter \textit{no}\textit{men} \textbf{su}um.
+	
+	4. Nam, etsi ambulávero in médio umbræ mortis, non timébo \textbf{ma}la:~* quóni\textit{am} \textit{tu} \textbf{me}cum es.
+	
+	5. Virga tua, et báculus \textbf{tu}us:~* ipsa me \textit{con}\textit{so}\textbf{lá}ta sunt.
+	
+	6. Parásti in conspéctu meo \textbf{men}sam,~* advérsus eos, qui \textit{trí}\textit{bu}\textbf{lant} me.
+	
+	7. Impinguásti in óleo caput \textbf{me}um:~* et calix meus inébrians \textit{quam} \textit{præ}\textbf{clá}rus est!
+	
+	8. Et misericórdia tua subse\textbf{qué}tur me~* ómnibus diébus \textit{vi}\textit{tæ} \textbf{me}æ.
+	
+	9. Et ut inhábitem in domo \textbf{Dó}mini,~* in longitúdi\textit{nem} \textit{di}\textbf{é}rum.
+	
+	10. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+ }{
+ 	1. The Lord ruleth me: and I shall want nothing: He hath set me in a place of pasture.
+ 	
+ 	2. He hath brought me up, on the water of refreshment: He hath converted my soul. 
+ 	
+ 	3. He hath led me on the paths of justice, for his own name's sake.
+ 	
+ 	4. For though I should walk in the midst of the shadow of death, I will fear no evils, for thou art with me.
+ 	
+ 	5. Thy rod and thy staff, they have comforted me.
+ 	
+ 	6. Thou hast prepared a table before me against them that afflict me. 
+ 	
+ 	7. Thou hast anointed my head with oil; and my chalice which inebriateth me, how goodly is it!
+ 	
+ 	8. And thy mercy will follow me all the days of my life.
+ 	
+ 	9. And that I may dwell in the house of the Lord unto length of days.
+ 	
+ 	10. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+ 
+\gresetinitiallines{1}
+\gregorioscore{antiphon_in_loco_pascuae}
+\textit{He hath set me in a place of pasture.}
+
+%%
+ 
+\vfill\pagebreak %\hspace{2cm}
+ 
+\textit{The sins of my youth and my offences, do not remember, O Lord.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_delicta_juventutis}
+ 
+\subsection*{Psalm 24}
+ 
+\gresetinitiallines{1}
+\gregorioscore{intonation_psalm_24}
+
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Neque irrídeant me inimíci \textbf{me}i:~* étenim univérsi, qui sústinent te, non \textit{con}\textit{fun}\textbf{dén}tur.
+
+	3. Confundántur omnes iníqua a\textbf{gén}tes~* \textit{su}\textit{per}\textbf{vá}cue.
+	
+	4. Vias tuas, Dómine, demónstra \textbf{mi}hi~* et sémitas tuas \textit{é}\textit{do}\textbf{ce} me.
+	
+	5. Dírige me in veritáte tua, et \textbf{do}ce me:~* quia tu es, Deus, Salvátor meus, et te sustínui \textit{to}\textit{ta} \textbf{di}e.
+	
+	6. Reminíscere miseratiónum tuárum, \textbf{Dó}mine,~* et misericordiárum tuárum, quæ a \textit{sǽ}\textit{cu}\textbf{lo} sunt.
+	
+	7. Delícta juventútis \textbf{me}æ,~* et ignorántias meas \textit{ne} \textit{me}\textbf{mí}neris.
+	
+	8. Secúndum misericórdiam tuam meménto \textbf{me}i tu,~* propter bonitátem \textit{tu}\textit{am}, \textbf{Dó}mine.
+	
+	9. Dulcis et rectus \textbf{Dó}minus:~* propter hoc legem dabit delinquénti\textit{bus} \textit{in} \textbf{vi}a.
+	
+	10. Díriget mansuétos in ju\textbf{dí}cio:~* docébit mites \textit{vi}\textit{as} \textbf{su}as.
+	
+	11. Univérsæ viæ Dómini, misericórdia et \textbf{vé}ritas,~* requiréntibus testaméntum ejus et testimó\textit{ni}\textit{a} \textbf{e}jus.
+	
+	12. Propter nomen tuum, Dómine, propitiáberis peccáto \textbf{me}o:~* mul\textit{tum} \textit{est} \textbf{e}nim.
+	
+	13. Quis est homo qui timet \textbf{Dó}minum?~* legem státuit ei in via, \textit{quam} \textit{e}\textbf{lé}git.
+	
+	14. Anima ejus in bonis demo\textbf{rá}bitur:~* et semen ejus heredi\textit{tá}\textit{bit} \textbf{ter}ram.
+	
+	15. Firmaméntum est Dóminus timéntibus \textbf{e}um:~* et testaméntum ipsíus ut manifes\textit{té}\textit{tur} \textbf{il}lis.
+	
+	16. Oculi mei semper ad \textbf{Dó}minum:~* quóniam ipse evéllet de láqueo \textit{pe}\textit{des} \textbf{me}os.
+	
+	17. Réspice in me, et miserére \textbf{me}i:~* quia únicus et pau\textit{per} \textit{sum} \textbf{e}go.
+	
+	18. Tribulatiónes cordis mei multipli\textbf{cá}tæ sunt:~* de necessitátibus meis \textit{é}\textit{ru}\textbf{e} me.
+	
+	19. Vide humilitátem meam, et labórem \textbf{me}um:~* et dimítte univérsa de\textit{líc}\textit{ta} \textbf{me}a.
+	
+	20. Réspice inimícos meos quóniam multipli\textbf{cá}ti sunt:~* et ódio iní\textit{quo} \textit{o}\textbf{dé}runt me.
+	
+	21. Custódi ánimam meam, et éru\textbf{e} me:~* non erubéscam quóniam spe\textit{rá}\textit{vi} \textbf{in} te.
+	
+	22. Innocéntes et recti adhæsérunt \textbf{mi}hi:~* quia sus\textit{tí}\textit{nu}\textbf{i} te.
+	
+	23. Líbera, Deus, \textbf{Is}raël:~* ex ómnibus tribulatió\textit{ni}\textit{bus} \textbf{su}is.
+	
+	24. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+ }{
+ 	1. To thee, O Lord, have I lifted up my soul. In thee, O my God, I put my trust; let me not be ashamed.
+ 	
+ 	2. Neither let my enemies laugh at me: for none of them that wait on thee shall be confounded.
+ 	
+ 	3. Let all them be confounded that act unjust things without cause. 
+ 	
+ 	4. Shew, O Lord, thy ways to me, and teach me thy paths.
+ 	
+ 	5. Direct me in thy truth, and teach me; for thou art God my Saviour; and on thee have I waited all the day long.
+ 	
+ 	6. Remember, O Lord, thy bowels of compassion; and thy mercies that are from the beginning of the world.
+ 	
+ 	7. The sins of my youth and my ignorances do not remember. 
+ 	
+ 	8. According to thy mercy remember thou me: for thy goodness' sake, O Lord.
+ 	
+ 	9. The Lord is sweet and righteous: therefore he will give a law to sinners in the way.
+ 	
+ 	10. He will guide the mild in judgment: he will teach the meek his ways.
+ 	
+ 	11. All the ways of the Lord are mercy and truth, to them that seek after his covenant and his testimonies.
+ 	
+ 	12. For thy name's sake, O Lord, thou wilt pardon my sin: for it is great.
+ 	
+ 	13. Who is the man that feareth the Lord? He hath appointed him a law in the way he hath chosen.
+ 	
+ 	14. His soul shall dwell in good things: and his seed shall inherit the land.
+ 	
+ 	15. The Lord is a firmament to them that fear him: and his covenant shall be made manifest to them.
+ 	
+ 	16. My eyes are ever towards the Lord: for he shall pluck my feet out of the snare.
+ 	
+ 	17. Look thou upon me, and have mercy on me; for I am alone and poor.
+ 	
+ 	18. The troubles of my heart are multiplied: deliver me from my necessities.
+ 	
+ 	19. See my abjection and my labour; and forgive me all my sins.
+ 	
+ 	20. Consider my enemies for they are multiplied, and have hated me with an unjust hatred.
+ 	
+ 	21. Keep thou my soul, and deliver me: I shall not be ashamed, for I have hoped in thee.
+ 	
+ 	22. The innocent and the upright have adhered to me: because I have waited on thee.
+ 	
+ 	23. Deliver Israel, O God, from all his tribulations.
+ 	
+ 	24. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_delicta_juventutis}
+\textit{The sins of my youth and my offences, do not remember, O Lord.}
+
+%%
+
+\hspace{2cm}
+
+\textit{I believe that I shall see the good things of the Lord in the land of the living.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_credo_videre}
+ 
+\subsection*{Psalm 26}
+ 
+\gresetinitiallines{1}
+\gregorioscore{intonation_psalm_26}
+
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Dóminus protéctor \textit{vi}\textit{tæ} \textbf{me}æ,~* a \textit{quo} \textit{tre}\textit{pi}\textbf{dá}bo?
+
+	3. Dum apprópiant super \textit{me} \textit{no}\textbf{cén}tes,~* ut e\textit{dant} \textit{car}\textit{nes} \textbf{me}as:
+	
+	4. Qui tríbulant me ini\textit{mí}\textit{ci} \textbf{me}i,~* ipsi infirmáti sunt \textit{et} \textit{ce}\textit{ci}\textbf{dé}runt.
+	
+	5. Si consístant advér\textit{sum} \textit{me} \textbf{cas}tra,~* non ti\textit{mé}\textit{bit} \textit{cor} \textbf{me}um.
+	
+	6. Si exsúrgat advér\textit{sum} \textit{me} \textbf{prǽ}lium,~* in hoc \textit{e}\textit{go} \textit{spe}\textbf{rá}bo.
+	
+	7. Unam pétii a Dómino, \textit{hanc} \textit{re}\textbf{quí}ram,~* ut inhábitem in domo Dómini ómnibus dié\textit{bus} \textit{vi}\textit{tæ} \textbf{me}æ:
+	
+	8. Ut vídeam volup\textit{tá}\textit{tem} \textbf{Dó}mini,~* et vísi\textit{tem} \textit{tem}\textit{plum} \textbf{e}jus.
+	
+	9. Quóniam abscóndit me in taberná\textit{cu}\textit{lo} \textbf{su}o:~* in die malórum protéxit me in abscóndito taber\textit{ná}\textit{cu}\textit{li} \textbf{su}i.
+	
+	10. In petra \textit{ex}\textit{al}\textbf{tá}vit me:~* et nunc exaltávit caput meum super in\textit{i}\textit{mí}\textit{cos} \textbf{me}os.
+	
+	11. Circuívi et immolávi in tabernáculo ejus hóstiam vocife\textit{ra}\textit{ti}\textbf{ó}nis:~* cantábo et psal\textit{mum} \textit{di}\textit{cam} \textbf{Dó}\textbf{mi}no.
+	
+	12. Exáudi, Dómine, vocem meam, qua cla\textit{má}\textit{vi} \textbf{ad} te:~* miserére me\textit{i}, \textit{et} \textit{ex}\textbf{áu}\textbf{di} me.
+	
+	13. Tibi dixit cor meum, exquisívit te fá\textit{ci}\textit{es} \textbf{me}a:~* fáciem tuam, Dó\textit{mi}\textit{ne}, \textit{re}\textbf{quí}ram.
+	
+	14. Ne avértas fáciem \textit{tu}\textit{am} \textbf{a} me,~* ne declínes in ira \textit{a} \textit{ser}\textit{vo} \textbf{tu}o.
+	
+	15. Adjútor \textit{me}\textit{us} \textbf{es}to:~* ne derelínquas me, neque despícias me, Deus, sa\textit{lu}\textit{tá}\textit{ris} \textbf{me}us.
+	
+	16. Quóniam pater meus, et mater mea de\textit{re}\textit{li}\textbf{qué}runt me:~* Dóminus \textit{au}\textit{tem} \textit{as}\textbf{súmp}\textbf{sit} me.
+	
+	17. Legem pone mihi, Dómine, in \textit{vi}\textit{a} \textbf{tu}a:~* et dírige me in sémitam rectam propter in\textit{i}\textit{mí}\textit{cos} \textbf{me}os.
+	
+	18. Ne tradíderis me in ánimas tribu\textit{lán}\textit{ti}\textbf{um} me:~* quóniam insurrexérunt in me testes iníqui, et mentíta est in\textit{í}\textit{qui}\textit{tas} \textbf{si}bi.
+	
+	19. Credo vidére \textit{bo}\textit{na} \textbf{Dó}mini~* in \textit{ter}\textit{ra} \textit{vi}\textbf{vén}\textbf{ti}um.
+	
+	20. Exspécta Dóminum, virí\textit{li}\textit{ter} \textbf{a}ge:~* et confortétur cor tuum, et \textit{sús}\textit{ti}\textit{ne} \textbf{Dó}\textbf{mi}num.
+	
+	21. Requiem æternam dona \textit{eis}, \textbf{Do}mine~* Et lux perpetua lu\textit{ceat} \textbf{e}is.
+ }{
+ 	1. The Lord is my light and my salvation, whom shall I fear?
+ 	
+ 	2. The Lord is the protector of my life: of whom shall I be afraid?
+ 	
+ 	3. Whilst the wicked draw near against me, to eat my flesh.
+ 	
+ 	4. My enemies that trouble me, have themselves been weakened, and have fallen.
+ 	
+ 	5. If armies in camp should stand together against me, my heart shall not fear.
+ 	
+ 	6. If a battle should rise up against me, in this will I be confident.
+ 	
+ 	7. One thing I have asked of the Lord, this will I seek after; that I may dwell in the house of the Lord all the days of my life. 
+ 	
+ 	8. That I may see the delight of the Lord, and may visit his temple.
+ 	
+ 	9. For he hath hidden me in his tabernacle; in the day of evils, he hath protected me in the secret place of his tabernacle.
+ 	
+ 	10. He hath exalted me upon a rock: and now he hath lifted up my head above my enemies.
+ 	
+ 	11. I have gone round, and have offered up in his tabernacle a sacrifice of jubilation: I will sing, and recite a psalm to the Lord.
+ 	
+ 	12. Hear, O Lord, my voice, with which I have cried to thee: have mercy on me and hear me.
+ 	
+ 	13. My heart hath said to thee: My face hath sought thee: thy face, O Lord, will I still seek.
+ 	
+ 	14. Turn not away thy face from me; decline not in thy wrath from thy servant.
+ 	
+ 	15. Be thou my helper, forsake me not; do not thou despise me, O God my Saviour.
+ 	
+ 	16. For my father and my mother have left me: but the Lord hath taken me up.
+ 	
+ 	17. Set me, O Lord, a law in thy way, and guide me in the right path, because of my enemies.
+ 	
+ 	18. Deliver me not over to the will of them that trouble me; for unjust witnesses have risen up against me; and iniquity hath lied to itself.
+ 	
+ 	19. I believe to see the good things of the Lord in the land of the living.
+ 	
+ 	20. Expect the Lord, do manfully, and let thy heart take courage, and wait thou for the Lord.
+ 	
+ 	21. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+
+\gresetinitiallines{1}
+\gregorioscore{antiphon_credo_videre}
+ \textit{I believe that I shall see the good things of the Lord in the land of the living.}
+
+ %%
+ 
+ \subsection*{Fourth Lesson - Job 13:22-28}
+ 
+ \begin{latinenglishsection}
+\latinenglish{
+	Responde mihi: Quantas h\'{a}beo iniquit\'{a}tes et pecc\'{a}ta' sc\'{e}lera mea et del\'{i}cta ost\'{e}nde mihi. Cur f\'{a}ciem tuam absc\'{o}ndis, et arbitr\'{a}ris me inim\'{i}cum tuum? Contra f\'{o}lium, quod vento r\'{a}pitur, ost\'{e}ndis pot\'{e}ntiam tuam, et st\'{i}pulam siccam pers\'{e}queris. Scribis enim contra me amarit\'{u}dines, et cons\'{u}mere me vis pecc\'{a}tis adolesc\'{e}nti\ae me\ae. Posu\'{i}sti in nervo pedem meum, et observ\'{a}sti omnes s\'{e}mitas meas, et vert\'{i}gia pedum me\'{o}rum consider\'{a}sti; qui quasi putr\'{e}do consum\'{e}ndus sum, et quasi vestim\'{e}ntum, quod com\'{e}ditur a t\'{i}nea.
+	
+	{\color{red}\Rbar.} Mem\'{e}nto mei, Deus, quia ventus est vita mea, * nec asp\'{i}ciat me visus h\'{o}minis.
+	
+	{\color{red}\Vbar.} De prof\'{u}ndis clam\'{a}vi ad te, D\'{o}mine: D\'{o}mine, ex\'{a}udi vocem meam. * Nec asp\'{i}ciat me visus h\'{o}minis.
+}{
+	I will speak, and do Thou answer me. How many are my iniquities and sins? make me know my crimes and offences. Why hidest Thou Thy face, and thinkest me Thy enemy? Against a leaf that is carried away with the wind, Thou showest Thy power; and Thou pursuest dry stubble. For Thou writest bitter things against me, and consumest me for the sins of my youth. Thou hast put my feet in the stocks, and Thou observest all my paths, and considerest the steos if ny feet: who am to be consumed as rottenness, and as a garment that is moth-eaten.
+	
+	{\color{red}\Rbar.} Remember me, O God, because my life is but wind, * nor may the sight of man behold me.
+	
+	{\color{red}\Vbar.} From the depths I have cried to Thee, O Lord; Lord, hear my voice. * Nor may the sight of man behold me.
+}
+\end{latinenglishsection}
+ 
+ \vfill\pagebreak
+ 
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{latinenglishsection}
 \latinenglish{
 	{\color{red}\Rbar.} Líbera me, Dómine, de morte ætérna in die illa treménda, {\color{red}*} Quando cæli movéndi sunt et terra: {\color{red}*} Dum véneris judicáre s\'{\ae}culum per ignem.\\
@@ -353,7 +662,7 @@
 }{
 	{\color{red}\Rbar.} Deliver me, O Lord, from eternal death, in that dreadful day: {\color{red}*} When the heavens and earth are to be moved: * When Thou shalt come to jusge the world by fire.\\
 	{\color{red}\Vbar.} I tremble and do fear when the examination is to be, and Thy wrath to come. {\color{red}*} When the heavens and earth are to be moved:\\
-	{\color{red}\Vbar.} That day is the day of anger, of calamity, and of misery, a great day and very bitter. {\color{red}*} When Thou shalt come to jusge the world by fire.
+	{\color{red}\Vbar.} That day is the day of anger, of calamity, and of misery, a great day and very bitter. {\color{red}*} When Thou shalt come to judge the world by fire.
 }
 \end{latinenglishsection}
 
